Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33734

sql_sequence.next fails with UBSAN in buildbot and outside

    XMLWordPrintable

Details

    Description

      sql_sequence.next 'innodb'               [ fail ]  Found warnings/errors in server log file!
              Test ended at 2024-03-20 11:13:16
      line
      /data/bld/11.5-ubsan/sql/sql_sequence.h:233:19: runtime error: signed integer overflow: -1000 + -9223372036854775807 cannot be represented in type 'long long int'
      ^ Found warnings in /mnt8t/bld/11.5-ubsan/mysql-test/var/log/mysqld.1.err
      ok
      

      The failure apparently started happening after MDEV-28152, first on the development branch.

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 3h 38m
                  1d 3h 38m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.